k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: soa-microservices
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: soa-microservices
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - {}

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-eureka
  namespace: soa-microservices
spec:
  podSelector:
    matchLabels:
      app: eureka
  ingress:
    - from:
        - podSelector: {}
  policyTypes:
    - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-user-to-chat
  namespace: soa-microservices
spec:
  podSelector:
    matchLabels:
      app: chatsoa
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: usersoa
  policyTypes:
    - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-engagement-to-user
  namespace: soa-microservices
spec:
  podSelector:
    matchLabels:
      app: usersoa
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: engagementsoa
  policyTypes:
    - Ingress
